kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: elkstack
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: kibana-tls
    hosts: 
    - kibana.domain.com
  rules:
  - host: kibana.domain.com
    http:
      paths:
      - backend:
          serviceName: kibana-nodeport
          servicePort: 5601
